--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@babel/runtime": "^7.20.6",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1"
   },
   "devDependencies": {
