--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,17 +13,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.1.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-paginate": "^8.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
