--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,14 +14,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.2",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.1.3",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-jwt": "^1.2.0",
     "react-paginate": "^8.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
